@@ -168,20 +168,19 @@ int SFRF_TestThreshold(
 void SFRF_ShowObjects(RateFilterConfig*);
 
 static inline void EnableInternalEvent(RateFilterConfig* config, uint32_t sid)
-{   
+{
     if (config == NULL)
         return;
 
     config->internal_event_mask |= (1 << sid);
 }
 
-static inline int InternalEventIsEnabled(RateFilterConfig* config, uint32_t sid)
+static inline bool InternalEventIsEnabled(RateFilterConfig* config, uint32_t sid)
 {
     if (config == NULL)
         return 0;
 
     return (config->internal_event_mask & (1 << sid));
 }
-
 #endif
 
