@@ -23,6 +23,7 @@ set( UTIL_INCLUDES
     sfportobject.h
     snort_bounds.h
     stats.h
+    util.h
 )
 
 ADD_LIBRARY( utils STATIC
@@ -48,7 +49,6 @@ ADD_LIBRARY( utils STATIC
     strvec.h
     stats.cc
     util.cc
-    util.h
     util_jsnorm.cc 
     util_jsnorm.h
     util_math.cc 
