@@ -1,3 +1,7 @@
+15/04/28 - build 149
+
+-- fixed build issue with extras
+
 15/04/28 - build 148
 
 -- fixed default validation issue reported by Sancho Panza
